--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -5,9 +9,23 @@ body {
   font-size: 10px;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+/* NavBar Styling */
 .nav-wrapper {
   width: 100%;
-  height: 100px;
+  height: 90px;
+  display: block;
+  background-color: #fff;
 }
 
 .nav-inner-wrapper {
@@ -20,4 +38,59 @@ body {
 
 .nav-logo {
   width: 25px;
+}
+
+.nav-list {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 1.4em;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+.nav-list li {
+  padding: 0 6%;
+}
+
+.nav-list li a {
+  padding: 1% 3%;
+}
+
+.nav-list li a:hover {
+  color: #35d56a;
+  transition: 0.3s;
+}
+
+.active {
+  color: #35d56a;
+}
+
+.nav-list .nav-icons {
+  font-size: 1.4em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 20%;
+}
+
+.sticky {
+  position: fixed;
+  top: 0px;
+  transform: translate(0, -200px);
+}
+
+.in-view {
+  transform: translate(0, 0);
+  transition: all 0.3s ease;
+}
+
+/* ------------------------- HOME PAGE ----------------- */
+
+/* Featured Space */
+.featured-view {
+  background-color: rgb(247, 247, 247);
+  height: 86vh;
 }
